Fix arrow overlap on student section

--- a/resources/assets/sass/jquery.fullPage.scss
+++ b/resources/assets/sass/jquery.fullPage.scss
@@ -79,6 +79,10 @@ html.fp-enabled,
     font-family: 'Glyphicons Halflings';
 
     @include breakpoint(tablet) {
+        left: 30px;
+    }
+
+    @include breakpoint(desktop-lg) {
         left: 70px;
     }
 
